# Novoyaz

./: CMakeLists.txt  README.md
Atoms/: CMakeLists.txt
Atoms/includes/: main_.hpp  sim.hpp
Atoms/resources/: main_.ll  modern_main_.ll
Atoms/src/: main.cpp  mainWithRGB_.cpp  main_.cpp  sim.cpp
MyProfiler/: CMakeLists.txt  compute_stat.py
MyProfiler/resources/c_examples/: hello.c
MyProfiler/src/: log.c  pass_profile.cpp  pass_start.cpp
includes/: main_.hpp  sim.hpp
src/: main.cpp
